# vokler

./: social_video_downloader_ui.html
api/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-start.sh  pyproject.toml  railpack.json  railway.json  requirements.txt  run.py
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_download_format.py  003_history_user_nullable.py  004_download_format_length.py  005_archive_jobs.py
api/app/: __init__.py  config.py  database.py  deps.py  main.py
api/app/middleware/: __init__.py  frontend_app_key.py
api/app/models/: __init__.py  archive.py  history.py  job.py  user.py
api/app/routers/: __init__.py  auth.py  download.py  history.py  ws.py
api/app/schemas/: __init__.py  archive.py  auth.py  history.py  job.py  preview.py
api/app/security/: __init__.py  app_key.py
api/app/services/: __init__.py  auth_tokens.py  downloader.py  processor.py  storage.py  url_parser.py
api/app/workers/: __init__.py  tasks.py
cms/: index.html  package.json  pnpm-lock.yaml
extension/: .env.example  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
mobile/: app.json  package-lock.json  package.json  pnpm-lock.yaml
mobile/lib/: api.ts  (+2 more)
scripts/: README.md  api-dev.bat  api-dev.sh  api-docker-up.bat  api-docker-up.sh  api-worker.bat  api-worker.sh  extension-dev.bat  extension-dev.sh  mobile-dev.bat  mobile-dev.sh  web-dev.bat  web-dev.sh
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  railway.json
(+77 files in other folders)
