[project]
name = "vokler-api"
version = "0.1.0"
description = "Stream video downloader API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "aioboto3>=13.2.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    # default + curl-cffi: requests/websockets/certifi so Docker/slim images don’t hit
    # NoSupportingHandlers / urllib FileNotFoundError on YouTube extraction.
    "yt-dlp[default,curl-cffi]>=2025.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
